Reduced tab font size to prevent wrapping

--- a/frontend/src/styles/components/builder/_Builder.scss
+++ b/frontend/src/styles/components/builder/_Builder.scss
@@ -64,6 +64,7 @@
 
     [role=tab] {
       display: inline-block;
+      font-size: 0.98em;
       list-style: none;
       padding: 0.75em 1em;
       cursor: pointer;
